--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-.navbar{
+.navbar {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -14,22 +14,25 @@
     padding-top: 40px;
 }
 
-html, body{
+html,
+body {
     min-height: 100vh;
 }
-body{
+
+body {
     background-color: #fafafa;
     padding: 0px 40px;
 }
 
-li{
+li {
     list-style-type: none;
 }
-li a{
+
+li a {
     text-decoration: none;
 }
 
-h1{
+h1 {
     font-family: 'Be Vietnam Pro', sans-serif;
     font-size: 164px;
     letter-spacing: -0.01em;
@@ -41,7 +44,7 @@ h1{
 }
 
 
-h2{
+h2 {
     font-family: 'Be Vietnam Pro', sans-serif;
     font-size: 40px;
     letter-spacing: -0.01em;
@@ -51,36 +54,40 @@ h2{
 
 }
 
-p{
-    font-family: 'IBM Plex Mono',monospace;
+p {
+    font-family: 'IBM Plex Mono', monospace;
     text-transform: uppercase;
     color: #333333;
     font-size: 16px;
     line-height: 120%;
 }
 
-.hero{
+.hero {
     display: flex;
     flex-direction: column;
     row-gap: 40px;
-    padding-top: 40px;
-    background-color: yellow;
+    /* background-color: yellow; */
+    height: 85vh;
+    justify-content: flex-end; 
 }
-p.label-description{
+
+p.label-description {
     color: #a3a3a3;
 }
 
-.hero-description p{
+.hero-description p {
     max-width: 493px;
 }
 
-.hero-description{
+.hero-description {
     display: flex;
     justify-content: space-between;
     max-width: 950px;
+    bottom: 20px; /* Adjust based on design */
+    left: 20px;   /* Adjust based on design */
 }
 
-.hero-cols{
+.hero-cols {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
