--- a/static/mobile-style.css
+++ b/static/mobile-style.css
@@ -1,17 +1,34 @@
 @media only screen and (max-width: 1080px) {
-    body {
-      background-color: red;
-    }
-    h1{
-        font-size: 120px;
-        width: 600px;
-    }
+  body {
+    background-color: red;
+  }
+
+  h1 {
+    font-size: 120px;
+    width: 600px;
+  }
 }
 
 
 
 @media only screen and (max-width: 600px) {
-    body {
-      background-color: orange;
-    }
+  body {
+    background-color: orange;
+    padding: 0px 20px;
+    overflow-x: hidden;
+  }
+  .navbar{
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 80px;
+    width: 400px;
+  }
+  h2{
+    font-size: 24px;
+  }
+  p{
+    font-size: 12px;
+  }
 }
