--- a/static/mobile-style.css
+++ b/static/mobile-style.css
@@ -7,8 +7,23 @@
     font-size: 120px;
     width: 600px;
   }
+
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
+@media only screen and (max-width: 900px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 
 
 @media only screen and (max-width: 600px) {
@@ -17,18 +32,21 @@
     padding: 0px 20px;
     overflow-x: hidden;
   }
-  .navbar{
+
+  .navbar {
     width: 100%;
   }
 
   h1 {
-    font-size: 80px;
-    width: 400px;
+    font-size: 60px;
+    width: 320px;
   }
-  h2{
+
+  h2 {
     font-size: 24px;
   }
-  p{
+
+  p {
     font-size: 12px;
   }
 }
