--- a/static/style.css
+++ b/static/style.css
@@ -51,7 +51,13 @@ li {
 
 li a {
     text-decoration: none;
+    color: #333333;
 }
+
+.activeLink {
+    text-decoration: underline;
+}
+
 
 h1 {
     font-family: 'Be Vietnam Pro', sans-serif;
