found the solution to move text, the char span class needs to be inline-block

--- a/static/style.css
+++ b/static/style.css
@@ -71,6 +71,16 @@ h1 {
 
 }
 
+.rayyan-container {
+    height: 500px;
+
+}
+
+.char{
+    display: inline-block;
+    color: blue;
+}
+
 
 h2 {
     font-family: 'Be Vietnam Pro', sans-serif;
