--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ body {
     padding: 0px 40px;
     overflow-x: hidden;
     position: relative;
-}
+   }
 
 li {
     list-style-type: none;
@@ -68,11 +68,18 @@ h1 {
     line-height: 100%;
     color: #333333;
     width: 780px;
+    cursor: default;
+    
 
 }
 
 
 .char{
+    display: inline-block;
+/* supaya textnya bergerak */
+}
+
+.word{
     display: inline-block;
 /* supaya textnya bergerak */
 }
@@ -103,6 +110,7 @@ p {
     /* background-color: yellow; */
     height: 85vh;
     justify-content: flex-end;
+    margin-bottom: 80px;
 }
 
 p.label-description {
@@ -125,9 +133,7 @@ p.label-description {
     row-gap: 20px;
 }
 
-.work {
-    padding: 80px 0;
-}
+
 
 .grid {
     display: grid;
